--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>beginner developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Panjab,India</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Basketball and stocks</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Video game development</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Auburn,Washington</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To change careers</p>
     </section>
 
     <footer id="footer">
